copy Base64 code